--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,1 @@
-:root {
-    box-sizing: border-box;
-    line-height: 1.5;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-}
-
-/* set core root defaults */
-html:focus-within {
-    scroll-behavior: smooth;
-}
-
-/**
- * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value
- * making all elements inheriting from the root box-sizing value
- * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- */
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-    font-size: 100%;
-    font-family: var(--font-family);
-    font-weight: var(--small-font);
-}
-
-ul {
-    list-style-type: none;
-}
-
-/* Remove the border on images inside links in IE 10. */
-img {
-    border-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-input,
-textarea {
-    appearance: none;
-}
-
-button:focus,
-button:focus-visible {
-    outline: calc(4rem / 16) auto -webkit-focus-ring-color;
-}
-
-/* Remove all animations, transitions, and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-        scroll-behavior: auto;
-    }
-
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-}
+@import 'tailwindcss';
