--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,22 @@
 
 @theme {
     --font-poppins: Poppins, sans-serif;
+
+    --animate-shake: shake 0.8s ease-in-out;
+    @keyframes shake {
+        0%,
+        100% {
+            transform: translateX(0);
+        }
+        20%,
+        60% {
+            transform: translateX(-5px);
+        }
+        40%,
+        80% {
+            transform: translateX(5px);
+        }
+    }
 }
 
 @theme inline {
@@ -53,18 +69,18 @@
     --card-foreground: oklch(0.129 0.042 264.695);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.129 0.042 264.695);
-    --primary: oklch(0.208 0.042 265.755);
-    --primary-foreground: oklch(0.984 0.003 247.858);
+    --primary: var(--color-slate-800);
+    --primary-foreground: var(--color-zinc-100);
     --secondary: oklch(0.968 0.007 247.896);
     --secondary-foreground: oklch(0.208 0.042 265.755);
     --muted: oklch(0.968 0.007 247.896);
     --muted-foreground: oklch(0.554 0.046 257.417);
     --accent: oklch(0.968 0.007 247.896);
     --accent-foreground: oklch(0.208 0.042 265.755);
-    --destructive: oklch(0.577 0.245 27.325);
+    --destructive: var(--color-red-500);
     --border: oklch(0.929 0.013 255.508);
-    --input: oklch(0.929 0.013 255.508);
-    --ring: oklch(0.704 0.04 256.788);
+    --input: var(--color-indigo-200);
+    --ring: var(--color-indigo-600);
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
     --chart-3: oklch(0.398 0.07 227.392);
